# OpenCL-Mandelbrot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  gpu_compute.cpp  gpu_compute.g.cpp  gpu_compute.h  main.m.cpp  mandelbrot.cl  mandelbrot.h  raster.cpp  raster.g.cpp  raster.h
